--- a/ProjetINFO2A/pom.xml
+++ b/ProjetINFO2A/pom.xml
@@ -29,6 +29,11 @@
             <version>2.4.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>de.articdive</groupId>
+            <artifactId>jnoise-pipeline</artifactId>
+            <version>4.0.0</version>
+        </dependency>
 
     </dependencies>
 
